--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
 *{
   margin:0;
   padding:0;
+  
+}
+
+body{
+  display:flex;
+  height:100vh;
+  justify-content: center;
+  align-items: center;
+  background-color: #7998EE;
 }
 
 
@@ -9,55 +18,71 @@
   flex-direction: column;
   height:35rem;
   width:28rem;
-  background-color: blue;
+  background-color: #461E52;
   border-radius: 10px;
-  border:1px solid;
+  border:2px solid;
+}
+
+.screen{
+  height:8rem;
+  width:auto;
+  background-color: #0192b6;
+  margin:1rem;
+  border-radius: 10px;
+  border:2px solid;
 }
 
 .buttons1, .buttons2{
   display:flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  width:auto;
-  margin:1.5rem;
-  
-}
+  margin:1rem;  
+ }
 
 .buttons1{
   width:auto;
-  gap:5%;
+  gap:1rem;
   height: 10%;
-  margin:1.5rem;
-  margin-bottom: 0;
   margin-top:0;
-}
+  margin-bottom:0;
+
+  }
 
 .buttons2{
-  
   height:30rem;
+  display:flex;
+  align-content: space-around;
+  
 }
 
 .buttontop{
   height:100%;
+  width:10rem;
   flex: 1 1 auto;
   font-size:20px;
-  border:1px solid;
-}
-
-
-.screen{
-  height:8rem;
-  width:auto;
-  background-color: white;
-  margin:1.5rem;
+  border:2px solid;
   border-radius: 10px;
-  border:1px solid;
+  background-color: #556DC8;
 }
+
+
+
 
 .button{
   height:18%;
   width:22%;
   font-size:30px;
-  border:1px solid;
+  border:2px solid;
+  border-radius: 10px;
 }
 
+.button.op{
+  background-color: #DD517F;
+}
+
+.button.num{
+  background-color: #E68E36;
+}
+.button.else{
+  background-color: #556DC8;
+}
