--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body{
   margin:1rem;
   border-radius: 10px;
   border:2px solid;
+  font-size:60px;
 }
 
 .buttons1, .buttons2{
@@ -49,9 +50,10 @@ body{
   }
 
 .buttons2{
-  height:30rem;
+  height:20rem;
   display:flex;
-  align-content: space-around;
+  align-content: inherit;
+ 
   
 }
 
